<resources>
    <string name="app_name">Practica_ChekBox</string>

    <string name="txt_valor1">Dame el primer valor</string>
    <string name="txt_valor2">Dame el segundo valor</string>

    <string name="check_suma">Sumar</string>
    <string name="check_resta">Restar</string>

    <string name="button">Calcular</string>
    <string name="button2">Borrar</string>

    <string name="tv_resultado">Resultado</string>
</resources>